# Image-Scalar

./: CMakeLists.txt  README.md
imageScalar/src/: main.cpp
